Added new features around media management

--- a/grails-app/i18n/crm-campaign.properties
+++ b/grails-app/i18n/crm-campaign.properties
@@ -10,10 +10,15 @@ crmCampaign.button.create.label=Ny kampanj
 crmCampaign.number.label=Nummer
 crmCampaign.code.label=Kampanjkod
 crmCampaign.name.label=Namn
+crmCampaign.startTime.label=Startar
+crmCampaign.endTime.label=Slutar
 crmCampaign.status.label=Status
+crmCampaign.parent.label=Huvudkampanj
+crmCampaign.children.label=Underkampanjer
 crmCampaign.handlerName.label=Kampanjtyp
 crmCampaign.handlerConfig.label=Inst\u00E4llningar
 crmCampaign.tab.main.label=Kampanj
+crmCampaign.tab.children.label=Underkampanjer
 crmCampaign.tab.documents.label=Dokument
 crmCampaign.button.settings.label=Inst\u00E4llningar
 crmCampaign.button.settings.help=Kampanjinst\u00E4llningar
@@ -22,3 +27,9 @@ crmCampaignStatus.label=Kampanjstatus
 
 productDiscountCampaign.label=Produktrabatt
 informationCampaign.label=Informationskampanj
+
+feature.crmCampaign.description=Administrera kampanjer
+feature.crmCampaign.label=Kampanjhantering
+feature.crmCampaign.permission.admin=Administrera kampanjer
+feature.crmCampaign.permission.guest=S\u00F6ka kampanjer
+feature.crmCampaign.permission.user=Skapa och \u00E4ndra kampanjer
