Improvements introduced by email campaign implementation

--- a/grails-app/i18n/crm-campaign.properties
+++ b/grails-app/i18n/crm-campaign.properties
@@ -1,12 +1,14 @@
 crmCampaign.label=Kampanj
 crmCampaign.index.label=Kampanjer
 crmCampaign.find.title=S\u00F6k kampanjer
+crmCampaign.button.find.label=S\u00F6k kampanjer
 crmCampaign.list.title=Kampanjer
 crmCampaign.create.title=Registrera ny kampanj
 crmCampaign.edit.title=Redigera kampanj - {1}
 crmCampaign.show.title=Kampanj - {1}
 crmCampaign.settings.title=Inst\u00E4llningar - {1}
 crmCampaign.button.create.label=Ny kampanj
+crmCampaign.button.create.help=Registrera ny kampanj
 crmCampaign.number.label=Nummer
 crmCampaign.code.label=Kampanjkod
 crmCampaign.name.label=Namn
@@ -15,18 +17,43 @@ crmCampaign.endTime.label=Slutar
 crmCampaign.status.label=Status
 crmCampaign.parent.label=Huvudkampanj
 crmCampaign.children.label=Underkampanjer
+crmCampaign.username.label=Kampanjansvarig
 crmCampaign.handlerName.label=Kampanjtyp
 crmCampaign.handlerConfig.label=Inst\u00E4llningar
 crmCampaign.tab.main.label=Kampanj
 crmCampaign.tab.children.label=Underkampanjer
+crmCampaign.tab.target.label=M\u00E5lgrupp
 crmCampaign.tab.documents.label=Dokument
 crmCampaign.button.settings.label=Inst\u00E4llningar
 crmCampaign.button.settings.help=Kampanjinst\u00E4llningar
+crmCampaign.button.recipients.label=M\u00E5lgrupp {0} st
+crmCampaign.button.target.execute.label=Uppdatera m\u00E5lgrupp
+crmCampaign.button.target.execute.help=Generera om urvalet och l\u00E4gg till de poster i m\u00E5lgruppen som eventuellt saknas
+crmCampaign.target.created.message={0} post(er) adderades till m\u00E5lgruppen
+crmCampaign.target.create.error=Fel vid uppdatering av m\u00E5lgrupp, kontrollera din konfiguration
+crmCampaign.recipients.title=M\u00E5lgrupp
+crmCampaign.recipients.button.delete.label=Rensa m\u00E5lgruppen
+crmCampaign.recipients.button.delete.help=Radera de poster i m\u00E5lgruppen som \u00E4nnu inte anv\u00E4nts
+crmCampaign.recipients.deleted.message={1} poster raderades fr\u00E5n m\u00E5lgruppen
+
+crmCampaignRecipient.label=M\u00E5lgrupp
 
 crmCampaignStatus.label=Kampanjstatus
 
+crmCampaignTarget.label=M\u00E5lgrupp
+crmCampaignTarget.orderIndex.label=Ordning
+crmCampaignTarget.operation.label=Operation
+crmCampaignTarget.name.label=Urval
+crmCampaignTarget.uriString.label=Urval
+crmCampaignTarget.uri.label=Urval
+crmCampaignTarget.operation.-1=Ta bort
+crmCampaignTarget.operation.0=Addera
+crmCampaignTarget.operation.1=Beh\u00E5ll
+
 productDiscountCampaign.label=Produktrabatt
 informationCampaign.label=Informationskampanj
+emailCampaign.label=E-postutskick
+bannerCampaign.label=Reklambanner
 
 feature.crmCampaign.description=Administrera kampanjer
 feature.crmCampaign.label=Kampanjhantering
