Email campaigns works now!

--- a/grails-app/i18n/crm-campaign.properties
+++ b/grails-app/i18n/crm-campaign.properties
@@ -37,6 +37,16 @@ crmCampaign.recipients.button.delete.help=Radera de poster i m\u00E5lgruppen som
 crmCampaign.recipients.deleted.message={1} poster raderades fr\u00E5n m\u00E5lgruppen
 
 crmCampaignRecipient.label=M\u00E5lgrupp
+crmCampaignRecipient.campaign.label=Kampanj
+crmCampaignRecipient.ref.label=Kontakt
+crmCampaignRecipient.email.label=E-postadress
+crmCampaignRecipient.dateCreated.label=Skapad
+crmCampaignRecipient.dateSent.label=Skickad
+crmCampaignRecipient.dateOpened.label=\u00D6ppnad
+crmCampaignRecipient.dateOptOut.label=Avslutat
+crmCampaignRecipient.dateBounced.label=Studsat
+crmCampaignRecipient.reason.label=Orsak/meddelande
+crmCampaignRecipient.email.blank.message=E-postadressen m\u00E5ste vara ifylld
 
 crmCampaignStatus.label=Kampanjstatus
 
