First email campaign executed in production!

--- a/grails-app/i18n/crm-campaign.properties
+++ b/grails-app/i18n/crm-campaign.properties
@@ -1,5 +1,6 @@
 crmCampaign.label=Kampanj
 crmCampaign.index.label=Kampanjer
+crmCampaign.index.help=Kampanjhanering (e-postutskick, reklambanners, etc.)
 crmCampaign.find.title=S\u00F6k kampanjer
 crmCampaign.button.find.label=S\u00F6k kampanjer
 crmCampaign.list.title=Kampanjer
@@ -15,6 +16,7 @@ crmCampaign.name.label=Namn
 crmCampaign.startTime.label=Startar
 crmCampaign.endTime.label=Slutar
 crmCampaign.status.label=Status
+crmCampaign.active.label=Aktiv
 crmCampaign.parent.label=Huvudkampanj
 crmCampaign.children.label=Underkampanjer
 crmCampaign.username.label=Kampanjansvarig
@@ -26,28 +28,33 @@ crmCampaign.tab.target.label=M\u00E5lgrupp
 crmCampaign.tab.documents.label=Dokument
 crmCampaign.button.settings.label=Inst\u00E4llningar
 crmCampaign.button.settings.help=Kampanjinst\u00E4llningar
-crmCampaign.button.recipients.label=M\u00E5lgrupp {0} st
-crmCampaign.button.target.execute.label=Uppdatera m\u00E5lgrupp
-crmCampaign.button.target.execute.help=Generera om urvalet och l\u00E4gg till de poster i m\u00E5lgruppen som eventuellt saknas
+crmCampaign.button.recipients.label=Visa mottagare
+crmCampaign.button.target.count.label=Ber\u00E4kna mottagare
+crmCampaign.button.target.count.help=K\u00F6r m\u00E5lgruppsspecifikationen och ber\u00E4kna antalet mottagare, men l\u00E4gg dem inte i k\u00F6n.
+crmCampaign.button.target.execute.label=Skapa mottagare
+crmCampaign.button.target.execute.help=K\u00F6r m\u00E5lgruppsspecifikationen och l\u00E4gg till de mottagare som eventuellt saknas
 crmCampaign.target.created.message={0} post(er) adderades till m\u00E5lgruppen
-crmCampaign.target.create.error=Fel vid uppdatering av m\u00E5lgrupp, kontrollera din konfiguration
+crmCampaign.target.create.error=Fel vid generering av mottagare, kontrollera din konfiguration
 crmCampaign.recipients.title=M\u00E5lgrupp
+crmCampaign.recipients.count.label={0} st mottagare
+crmCampaign.recipients.hits.label={0} st svar
 crmCampaign.recipients.button.delete.label=Rensa m\u00E5lgruppen
-crmCampaign.recipients.button.delete.help=Radera de poster i m\u00E5lgruppen som \u00E4nnu inte anv\u00E4nts
-crmCampaign.recipients.deleted.message={1} poster raderades fr\u00E5n m\u00E5lgruppen
+crmCampaign.recipients.button.delete.help=Radera de mottagare som \u00E4nnu inte anv\u00E4nts
+crmCampaign.recipients.deleted.message={1} mottagare raderades
 
 crmCampaignRecipient.label=M\u00E5lgrupp
 crmCampaignRecipient.campaign.label=Kampanj
 crmCampaignRecipient.ref.label=Kontakt
 crmCampaignRecipient.email.label=E-postadress
 crmCampaignRecipient.dateCreated.label=Skapad
-crmCampaignRecipient.dateSent.label=Skickad
-crmCampaignRecipient.dateOpened.label=\u00D6ppnad
-crmCampaignRecipient.dateOptOut.label=Avslutat
+crmCampaignRecipient.dateSent.label=Skickat
+crmCampaignRecipient.dateOpened.label=Responderat
+crmCampaignRecipient.dateOptOut.label=Tackat nej
 crmCampaignRecipient.dateBounced.label=Studsat
-crmCampaignRecipient.reason.label=Orsak/meddelande
+crmCampaignRecipient.reason.label=Orsak
 crmCampaignRecipient.email.blank.message=E-postadressen m\u00E5ste vara ifylld
-
+crmCampaignRecipient.button.execute.confirm.message=\u00C4r du s\u00E4ker p\u00E5 att du vill skapa mottagare nu?
+crmCampaignRecipient.button.delete.confirm.message=\u00C4r du s\u00E4ker p\u00E5 att du vill ta bort de som \u00E4nnu inte mottagit kampanjen?
 crmCampaignStatus.label=Kampanjstatus
 
 crmCampaignTarget.label=M\u00E5lgrupp
@@ -63,6 +70,7 @@ crmCampaignTarget.operation.1=Beh\u00E5ll
 productDiscountCampaign.label=Produktrabatt
 informationCampaign.label=Informationskampanj
 emailCampaign.label=E-postutskick
+emailCampaign.button.preview.label=F\u00F6rhandsgranska
 bannerCampaign.label=Reklambanner
 
 feature.crmCampaign.description=Administrera kampanjer
