--- a/grails-app/i18n/crm-campaign.properties
+++ b/grails-app/i18n/crm-campaign.properties
@@ -30,9 +30,9 @@ crmCampaign.button.settings.label=Inst\u00E4llningar
 crmCampaign.button.settings.help=Kampanjinst\u00E4llningar
 crmCampaign.button.recipients.label=Visa mottagare
 crmCampaign.button.target.count.label=Ber\u00E4kna mottagare
-crmCampaign.button.target.count.help=K\u00F6r m\u00E5lgruppsspecifikationen och ber\u00E4kna antalet mottagare, men l\u00E4gg dem inte i k\u00F6n.
-crmCampaign.button.target.execute.label=Skapa mottagare
-crmCampaign.button.target.execute.help=K\u00F6r m\u00E5lgruppsspecifikationen och l\u00E4gg till de mottagare som eventuellt saknas
+crmCampaign.button.target.count.help=K\u00F6r m\u00E5lgruppsspecifikationen och ber\u00E4kna antalet mottagare, men l\u00E4gg dem inte i utkorgen.
+crmCampaign.button.target.execute.label=Starta kampanjen
+crmCampaign.button.target.execute.help=K\u00F6r m\u00E5lgruppsspecifikationen och l\u00E4gg mottagarna i utkorgen
 crmCampaign.target.created.message={0} post(er) adderades till m\u00E5lgruppen
 crmCampaign.target.create.error=Fel vid generering av mottagare, kontrollera din konfiguration
 crmCampaign.recipients.title=M\u00E5lgrupp
