--- a/grails-app/i18n/crm-campaign-ui.properties
+++ b/grails-app/i18n/crm-campaign-ui.properties
@@ -44,3 +44,4 @@ emailCampaign.button.preview.label=F\u00F6rhandsgranska
 crmEmailCampaign.updated.message=Inst\u00E4llningarna uppdaterade
 emailCampaign.optout.title=Avregistrering
 emailCampaign.optout.link=<div style="font-size:smaller;">Vill du inte ha fler nyhetsbrev? <a href="{1}" target="_blank">Avregistrera dig h\u00E4r</a>.</div>
+bannerCampaign.button.settings.label=Inst\u00E4llningar
