--- a/grails-app/i18n/crm-campaign-ui.properties
+++ b/grails-app/i18n/crm-campaign-ui.properties
@@ -1,11 +1,11 @@
 crmCampaign.index.label=Kampanjer
-crmCampaign.index.help=Kampanjhanering (e-postutskick, reklambanners, etc.)
+crmCampaign.index.help=Kampanjhantering (e-postutskick, reklambanners, etc.)
 crmCampaign.find.title=S\u00F6k kampanjer
 crmCampaign.button.find.label=S\u00F6k kampanjer
 crmCampaign.list.title=Kampanjer
 crmCampaign.create.title=Registrera ny kampanj
-crmCampaign.edit.title=Redigera kampanj - {1}
-crmCampaign.show.title=Kampanj - {1}
+crmCampaign.edit.title=Redigera - {1}
+crmCampaign.show.title={1}
 crmCampaign.settings.title=Inst\u00E4llningar - {1}
 crmCampaign.button.create.label=Ny kampanj
 crmCampaign.button.create.help=Registrera ny kampanj
@@ -44,4 +44,6 @@ emailCampaign.button.preview.label=F\u00F6rhandsgranska
 crmEmailCampaign.updated.message=Inst\u00E4llningarna uppdaterade
 emailCampaign.optout.title=Avregistrering
 emailCampaign.optout.link=<div style="font-size:smaller;">Vill du inte ha fler nyhetsbrev? <a href="{1}" target="_blank">Avregistrera dig h\u00E4r</a>.</div>
+informationCampaign.button.settings.label=Inst\u00E4llningar
 bannerCampaign.button.settings.label=Inst\u00E4llningar
+productDiscountCampaign.button.settings.label=Inst\u00E4llningar
