Added confirmation dialog when switching templates

--- a/grails-app/i18n/crm-campaign-ui.properties
+++ b/grails-app/i18n/crm-campaign-ui.properties
@@ -41,6 +41,7 @@ crmCampaignRecipient.button.delete.confirm.message=\u00C4r du s\u00E4ker p\u00E5
 
 emailCampaign.button.settings.label=Inst\u00E4llningar/Layout
 emailCampaign.button.preview.label=F\u00F6rhandsgranska
+emailCampaign.template.change.confirm=\u00C4r du s\u00E4ker p\u00E5 att du vill byta till mall
 crmEmailCampaign.updated.message=Inst\u00E4llningarna uppdaterade
 emailCampaign.optout.title=Avregistrering
 emailCampaign.optout.link=<div style="font-size:smaller;">Vill du inte ha fler nyhetsbrev? <a href="{1}" target="_blank">Avregistrera dig h\u00E4r</a>.</div>
