Added Swedish locale

--- a/grails-app/i18n/crm-campaign-ui.properties
+++ b/grails-app/i18n/crm-campaign-ui.properties
@@ -1,50 +1,55 @@
-crmCampaign.index.label=Kampanjer
-crmCampaign.index.help=Kampanjhantering (e-postutskick, reklambanners, etc.)
-crmCampaign.find.title=S\u00F6k kampanjer
-crmCampaign.button.find.label=S\u00F6k kampanjer
-crmCampaign.list.title=Kampanjer
-crmCampaign.create.title=Registrera ny kampanj
-crmCampaign.edit.title=Redigera - {1}
+crmCampaign.index.label=Campaigns
+crmCampaign.index.help=Campaign Management (email, banners, etc.)
+crmCampaign.find.title=Find campaigns
+crmCampaign.button.find.label=Find campaigns
+crmCampaign.list.title=Campaigns
+crmCampaign.create.title=Add campaign
+crmCampaign.edit.title=Edit campaign - {1}
 crmCampaign.show.title={1}
-crmCampaign.settings.title=Inst\u00E4llningar - {1}
-crmCampaign.button.create.label=Ny kampanj
-crmCampaign.button.create.help=Registrera ny kampanj
+crmCampaign.settings.title=Settings - {1}
+crmCampaign.button.create.label=Add campaign
+crmCampaign.button.create.help=Add new campaign
 
-crmCampaign.tab.main.label=Kampanj
-crmCampaign.tab.children.label=Underkampanjer
-crmCampaign.tab.target.label=M\u00E5lgrupp
-crmCampaign.tab.documents.label=Dokument
+crmCampaign.tab.main.label=Campaign
+crmCampaign.tab.children.label=Sub-campaigns
+crmCampaign.tab.target.label=Target
+crmCampaign.tab.documents.label=Files
 
-crmCampaign.button.settings.label=Inst\u00E4llningar
-crmCampaign.button.settings.help=Kampanjinst\u00E4llningar
-crmCampaign.button.recipients.label=Visa mottagare
-crmCampaign.button.target.count.label=Ber\u00E4kna mottagare
-crmCampaign.button.target.count.help=K\u00F6r m\u00E5lgruppsspecifikationen och ber\u00E4kna antalet mottagare, men l\u00E4gg dem inte i utkorgen.
-crmCampaign.button.target.execute.label=Starta kampanjen
-crmCampaign.button.target.execute.help=K\u00F6r m\u00E5lgruppsspecifikationen och l\u00E4gg mottagarna i utkorgen
-crmCampaign.target.created.message={0} post(er) adderades till m\u00E5lgruppen
-crmCampaign.target.create.error=Fel vid generering av mottagare, kontrollera din konfiguration
+crmCampaign.button.settings.label=Settings
+crmCampaign.button.settings.help=Campaign settings
+crmCampaign.button.search.label=Search
+crmCampaign.button.recipients.label=Show recipients
+crmCampaign.button.recipients.help=Show recipients for this campaign
+crmCampaign.button.target.count.label=Count recipients
+crmCampaign.button.target.count.help=Calculate target group size (nothing is sent to the group)
+crmCampaign.button.target.execute.label=Start campaign
+crmCampaign.button.target.execute.help=Select target group and send message to recipients
+crmCampaign.target.created.message={0} recipient(s) added to the target group
+crmCampaign.target.create.error=Failed to generate target group, check your configuration
 
-crmCampaign.recipients.title=M\u00E5lgrupp
-crmCampaign.recipients.count.label={0} st mottagare
-crmCampaign.recipients.hits.label={0} st svar
-crmCampaign.recipients.button.delete.label=Rensa m\u00E5lgruppen
-crmCampaign.recipients.button.delete.help=Radera de mottagare som \u00E4nnu inte anv\u00E4nts
-crmCampaign.recipients.deleted.message={1} mottagare raderades
+crmCampaign.recipients.title=Target group
+crmCampaign.recipients.count.label={0} recipients
+crmCampaign.recipients.hits.label={0} responses
+crmCampaign.recipients.button.delete.label=Clear target group
+crmCampaign.recipients.button.delete.help=Remove recipients not yet sent to
+crmCampaign.recipients.deleted.message={1} recipients removed
 
-crmCampaign.button.copy.label=Kopiera denna kampanj
-crmCampaign.copied.message=Kampanjen kopierades
-crmCampaign.copy.error=Ett problem uppstod vid kopiering av kampanjen
+crmCampaign.button.copy.label=Copy this campaign
+crmCampaign.copied.message=The campaign was copied
+crmCampaign.copy.error=Failed to copy the campaign
 
-crmCampaignRecipient.button.execute.confirm.message=\u00C4r du s\u00E4ker p\u00E5 att du vill skapa mottagare nu?
-crmCampaignRecipient.button.delete.confirm.message=\u00C4r du s\u00E4ker p\u00E5 att du vill ta bort de som \u00E4nnu inte mottagit kampanjen?
+crmCampaignRecipient.button.execute.confirm.message=Are you sure you want to add recipients to the target group?
+crmCampaignRecipient.button.delete.confirm.message=Are you sure you want to remove unused recipients?
 
-emailCampaign.button.settings.label=Inst\u00E4llningar/Layout
-emailCampaign.button.preview.label=F\u00F6rhandsgranska
-emailCampaign.template.change.confirm=\u00C4r du s\u00E4ker p\u00E5 att du vill byta till mall
-crmEmailCampaign.updated.message=Inst\u00E4llningarna uppdaterade
-emailCampaign.optout.title=Avregistrering
-emailCampaign.optout.link=<div style="font-size:smaller;">Vill du inte ha fler nyhetsbrev? <a href="{1}" target="_blank">Avregistrera dig h\u00E4r</a>.</div>
-informationCampaign.button.settings.label=Inst\u00E4llningar
-bannerCampaign.button.settings.label=Inst\u00E4llningar
-productDiscountCampaign.button.settings.label=Inst\u00E4llningar
+emailCampaign.button.settings.label=Settings/layout
+emailCampaign.button.preview.label=Preview
+emailCampaign.template.change.confirm=Confirm template change
+crmEmailCampaign.updated.message=Settings updated
+emailCampaign.optout.title=Unsubscribe
+emailCampaign.optout.link=<div style="font-size:smaller;">If you don't want to receive more email from us, <a href="{1}" target="_blank">unsubscribe here</a>.</div>
+informationCampaign.button.settings.label=Settings
+bannerCampaign.button.settings.label=Settings
+productDiscountCampaign.button.settings.label=Settings
+
+crmCampaignQueryCommand.fromDate.label=From date
+crmCampaignQueryCommand.toDate.label=To date
