--- a/grails-app/i18n/crm-campaign-ui.properties
+++ b/grails-app/i18n/crm-campaign-ui.properties
@@ -33,6 +33,7 @@ crmCampaign.recipients.hits.label={0} responses
 crmCampaign.recipients.button.delete.label=Clear target group
 crmCampaign.recipients.button.delete.help=Remove recipients not yet sent to
 crmCampaign.recipients.deleted.message={1} recipients removed
+crmCampaign.recipients.delete.confirm=Are you sure you want to remove this recipient from the list?
 
 crmCampaign.button.copy.label=Copy this campaign
 crmCampaign.copied.message=The campaign was copied
