--- a/grails-app/i18n/crm-campaign-ui_sv.properties
+++ b/grails-app/i18n/crm-campaign-ui_sv.properties
@@ -33,6 +33,7 @@ crmCampaign.recipients.hits.label={0} st svar
 crmCampaign.recipients.button.delete.label=Rensa m\u00E5lgruppen
 crmCampaign.recipients.button.delete.help=Radera de mottagare som \u00E4nnu inte anv\u00E4nts
 crmCampaign.recipients.deleted.message={1} mottagare raderades
+crmCampaign.recipients.delete.confirm=\u00C4r du s\u00E4ker p\u00E5 att du vill radera mottagaren fr\u00E5n m\u00E5lgruppen?
 
 crmCampaign.button.copy.label=Kopiera denna kampanj
 crmCampaign.copied.message=Kampanjen kopierades
