--- a/grails-app/i18n/crm-campaign-ui_sv.properties
+++ b/grails-app/i18n/crm-campaign-ui_sv.properties
@@ -43,7 +43,7 @@ crmCampaignRecipient.button.execute.confirm.message=\u00C4r du s\u00E4ker p\u00E
 crmCampaignRecipient.button.delete.confirm.message=\u00C4r du s\u00E4ker p\u00E5 att du vill ta bort de som \u00E4nnu inte mottagit kampanjen?
 
 emailCampaign.button.settings.label=Inst\u00E4llningar/Layout
-emailCampaign.button.preview.label=F\u00F6rhandsgranska
+emailCampaign.button.preview.label=Granska
 emailCampaign.template.change.confirm=\u00C4r du s\u00E4ker p\u00E5 att du vill byta till mall
 crmEmailCampaign.updated.message=Inst\u00E4llningarna uppdaterade
 emailCampaign.optout.title=Avregistrering
