Redesigned layout for target group and recipients

--- a/grails-app/i18n/crm-campaign-ui_sv.properties
+++ b/grails-app/i18n/crm-campaign-ui_sv.properties
@@ -13,21 +13,24 @@ crmCampaign.button.create.help=Registrera ny kampanj
 crmCampaign.tab.main.label=Kampanj
 crmCampaign.tab.children.label=Underkampanjer
 crmCampaign.tab.target.label=M\u00E5lgrupp
-crmCampaign.tab.documents.label=Dokument
+crmCampaign.tab.recipients.label=Mottagare
+crmCampaign.tab.documents.label=Filer
 
 crmCampaign.button.settings.label=Inst\u00E4llningar
 crmCampaign.button.settings.help=Kampanjinst\u00E4llningar
 crmCampaign.button.search.label=Utf\u00F6r s\u00F6kning
 crmCampaign.button.recipients.label=Visa mottagare
 crmCampaign.button.recipients.help=Visa mottagare av kampanjen
-crmCampaign.button.target.count.label=Ber\u00E4kna mottagare
+crmCampaign.button.target.count.label=Ber\u00E4kna antal mottagare
 crmCampaign.button.target.count.help=K\u00F6r m\u00E5lgruppsspecifikationen och ber\u00E4kna antalet mottagare, men l\u00E4gg dem inte i utkorgen.
-crmCampaign.button.target.execute.label=Starta kampanjen
+crmCampaign.target.size.title=M\u00E5lgruppen ber\u00E4knas genom att urvalsspecifikationen k\u00F6rs och d\u00E4refter elimineras eventuella dubbletter (e-post).
+crmCampaign.target.size.label=M\u00E5lguppen omfattar just nu {1} mottagare.
+crmCampaign.button.target.execute.label=Skapa mottagare
 crmCampaign.button.target.execute.help=K\u00F6r m\u00E5lgruppsspecifikationen och l\u00E4gg mottagarna i utkorgen
 crmCampaign.target.created.message={0} post(er) adderades till m\u00E5lgruppen
 crmCampaign.target.create.error=Fel vid generering av mottagare, kontrollera din konfiguration
 
-crmCampaign.recipients.title=M\u00E5lgrupp
+crmCampaign.recipients.title=Mottagare
 crmCampaign.recipients.count.label={0} st mottagare
 crmCampaign.recipients.hits.label={0} st svar
 crmCampaign.recipients.button.delete.label=Rensa m\u00E5lgruppen
@@ -39,8 +42,14 @@ crmCampaign.button.copy.label=Kopiera denna kampanj
 crmCampaign.copied.message=Kampanjen kopierades
 crmCampaign.copy.error=Ett problem uppstod vid kopiering av kampanjen
 
+crmCampaignRecipient.button.add.label=L\u00E4gg till
+crmCampaignRecipient.add.title=L\u00E4gg till mottagare
 crmCampaignRecipient.button.execute.confirm.message=\u00C4r du s\u00E4ker p\u00E5 att du vill skapa mottagare nu?
-crmCampaignRecipient.button.delete.confirm.message=\u00C4r du s\u00E4ker p\u00E5 att du vill ta bort de som \u00E4nnu inte mottagit kampanjen?
+crmCampaignRecipient.button.delete.label=Ta bort
+crmCampaignRecipient.button.delete.help=Ta bort de markerade mottagarna fr\u00E5n s\u00E4ndlistan
+crmCampaignRecipient.button.delete.confirm.message=\u00C4r du s\u00E4ker p\u00E5 att du vill ta bort de markerade mottagarna?
+crmCampaignRecipient.deleted.message={1} st mottagare togs bort fr\u00E5n s\u00E4ndlistan
+crmCampaignRecipient.status.label=Status
 
 emailCampaign.button.settings.label=Inst\u00E4llningar/Layout
 emailCampaign.button.preview.label=Granska
