Added missing texts

--- a/grails-app/i18n/crm-campaign-ui.properties
+++ b/grails-app/i18n/crm-campaign-ui.properties
@@ -13,6 +13,7 @@ crmCampaign.button.create.help=Add new campaign
 crmCampaign.tab.main.label=Campaign
 crmCampaign.tab.children.label=Sub-campaigns
 crmCampaign.tab.target.label=Target
+crmCampaign.tab.recipients.label=Recipients
 crmCampaign.tab.documents.label=Files
 
 crmCampaign.button.settings.label=Settings
@@ -22,6 +23,8 @@ crmCampaign.button.recipients.label=Show recipients
 crmCampaign.button.recipients.help=Show recipients for this campaign
 crmCampaign.button.target.count.label=Count recipients
 crmCampaign.button.target.count.help=Calculate target group size (nothing is sent to the group)
+crmCampaign.target.size.title=Target group size is calculated by processing the configuration and removing duplicates
+crmCampaign.target.size.label=Target group include {1} recipients
 crmCampaign.button.target.execute.label=Start campaign
 crmCampaign.button.target.execute.help=Select target group and send message to recipients
 crmCampaign.target.created.message={0} recipient(s) added to the target group
@@ -39,9 +42,15 @@ crmCampaign.button.copy.label=Copy this campaign
 crmCampaign.copied.message=The campaign was copied
 crmCampaign.copy.error=Failed to copy the campaign
 
+crmCampaignRecipient.button.add.label=Add
+crmCampaignRecipient.add.title=Add recipient
 crmCampaignRecipient.button.execute.confirm.message=Are you sure you want to add recipients to the target group?
+crmCampaignRecipient.button.delete.label=Remove
+crmCampaignRecipient.button.delete.help=Remove selected recipients from list
 crmCampaignRecipient.button.delete.confirm.message=Are you sure you want to remove unused recipients?
 
+crmCampaignRecipient.deleted.message={1} recipients was removed from the list
+crmCampaignRecipient.status.label=Status
 emailCampaign.button.settings.label=Settings/layout
 emailCampaign.button.preview.label=Preview
 emailCampaign.template.change.confirm=Confirm template change
