Campaign start/end times can now be specified down to hours and minutes

--- a/grails-app/i18n/crm-campaign-ui.properties
+++ b/grails-app/i18n/crm-campaign-ui.properties
@@ -42,6 +42,8 @@ crmCampaign.button.copy.label=Copy this campaign
 crmCampaign.copied.message=The campaign was copied
 crmCampaign.copy.error=Failed to copy the campaign
 
+crmCampaign.active.title=Active campaigns
+
 crmCampaignRecipient.button.add.label=Add
 crmCampaignRecipient.add.title=Add recipient
 crmCampaignRecipient.button.execute.confirm.message=Are you sure you want to add recipients to the target group?
