--- a/grails-app/i18n/crm-campaign-ui_sv.properties
+++ b/grails-app/i18n/crm-campaign-ui_sv.properties
@@ -24,7 +24,7 @@ crmCampaign.button.recipients.help=Visa mottagare av kampanjen
 crmCampaign.button.target.count.label=Ber\u00E4kna antal mottagare
 crmCampaign.button.target.count.help=K\u00F6r m\u00E5lgruppsspecifikationen och ber\u00E4kna antalet mottagare, men l\u00E4gg dem inte i utkorgen.
 crmCampaign.target.size.title=M\u00E5lgruppen ber\u00E4knas genom att urvalsspecifikationen k\u00F6rs och d\u00E4refter elimineras eventuella dubbletter (e-post).
-crmCampaign.target.size.label=M\u00E5lguppen omfattar just nu {1} mottagare.
+crmCampaign.target.size.label=M\u00E5lgruppen omfattar just nu {1} mottagare.
 crmCampaign.button.target.execute.label=Skapa mottagare
 crmCampaign.button.target.execute.help=K\u00F6r m\u00E5lgruppsspecifikationen och l\u00E4gg mottagarna i utkorgen
 crmCampaign.target.created.message={0} post(er) adderades till m\u00E5lgruppen
@@ -41,6 +41,8 @@ crmCampaign.recipients.delete.confirm=\u00C4r du s\u00E4ker p\u00E5 att du vill 
 crmCampaign.button.copy.label=Kopiera denna kampanj
 crmCampaign.copied.message=Kampanjen kopierades
 crmCampaign.copy.error=Ett problem uppstod vid kopiering av kampanjen
+
+crmCampaign.active.title=Aktiva kampanjer
 
 crmCampaignRecipient.button.add.label=L\u00E4gg till
 crmCampaignRecipient.add.title=L\u00E4gg till mottagare
