Move hard coded Swedish text to i18n .properties

--- a/grails-app/i18n/crm-campaign-ui.properties
+++ b/grails-app/i18n/crm-campaign-ui.properties
@@ -53,12 +53,25 @@ crmCampaignRecipient.button.delete.confirm.message=Are you sure you want to remo
 
 crmCampaignRecipient.deleted.message={1} recipients was removed from the list
 crmCampaignRecipient.status.label=Status
+
+emailCampaign.subject.label=Subject
+emailCampaign.sender.label=Sender email
+emailCampaign.senderName.label=Sender name
+emailCampaign.partName.label=Part name
+emailCampaign.addPart.label=Add part
+emailCampaign.addPart.title=Add part
+emailCampaign.editPart.label=Edit part
+emailCampaign.removePart.label=Remove part
 emailCampaign.button.settings.label=Settings/layout
 emailCampaign.button.preview.label=Preview
+emailCampaign.button.browser.label=Open in new tab
+emailCampaign.button.save.label=Save
+emailCampaign.template.label=Template
 emailCampaign.template.change.confirm=Confirm template change
-crmEmailCampaign.updated.message=Settings updated
+emailCampaign.updated.message=Settings updated
 emailCampaign.optout.title=Unsubscribe
 emailCampaign.optout.link=<div style="font-size:smaller;">If you don't want to receive more email from us, <a href="{1}" target="_blank">unsubscribe here</a>.</div>
+
 informationCampaign.button.settings.label=Settings
 bannerCampaign.button.settings.label=Settings
 productDiscountCampaign.button.settings.label=Settings
