--- a/grails-app/i18n/crm-campaign-ui_sv.properties
+++ b/grails-app/i18n/crm-campaign-ui_sv.properties
@@ -53,12 +53,24 @@ crmCampaignRecipient.button.delete.confirm.message=\u00C4r du s\u00E4ker p\u00E5
 crmCampaignRecipient.deleted.message={1} st mottagare togs bort fr\u00E5n s\u00E4ndlistan
 crmCampaignRecipient.status.label=Status
 
+emailCampaign.subject.label=Rubrik
+emailCampaign.sender.label=Avs\u00E4ndarens e-post
+emailCampaign.senderName.label=Avs\u00E4ndarens namn
+emailCampaign.partName.label=Namn
+emailCampaign.addPart.label=L\u00E4gg till del
+emailCampaign.addPart.title=L\u00E4gg till del
+emailCampaign.editPart.label=\u00C4ndra del
+emailCampaign.removePart.label=Ta bort del
 emailCampaign.button.settings.label=Inst\u00E4llningar/Layout
+emailCampaign.button.save.label=Spara
 emailCampaign.button.preview.label=Granska
+emailCampaign.button.browser.label=\u00D6ppna p\u00E5 ny sida
+emailCampaign.template.label=Mall
 emailCampaign.template.change.confirm=\u00C4r du s\u00E4ker p\u00E5 att du vill byta till mall
-crmEmailCampaign.updated.message=Inst\u00E4llningarna uppdaterade
+emailCampaign.updated.message=Inst\u00E4llningarna uppdaterade
 emailCampaign.optout.title=Avregistrering
 emailCampaign.optout.link=<div style="font-size:smaller;">Vill du inte ha fler nyhetsbrev? <a href="{1}" target="_blank">Avregistrera dig h\u00E4r</a>.</div>
+
 informationCampaign.button.settings.label=Inst\u00E4llningar
 bannerCampaign.button.settings.label=Inst\u00E4llningar
 productDiscountCampaign.button.settings.label=Inst\u00E4llningar
