Make it possible to select a template when creating a new email campaign

--- a/grails-app/i18n/crm-campaign-ui.properties
+++ b/grails-app/i18n/crm-campaign-ui.properties
@@ -66,6 +66,7 @@ emailCampaign.button.settings.label=Settings/layout
 emailCampaign.button.preview.label=Preview
 emailCampaign.button.browser.label=Open in new tab
 emailCampaign.button.save.label=Save
+emailCampaign.create.title=Select email template for the campaign
 emailCampaign.template.label=Template
 emailCampaign.template.change.confirm=Confirm template change
 emailCampaign.updated.message=Settings updated
