--- a/grails-app/i18n/crm-campaign-ui_sv.properties
+++ b/grails-app/i18n/crm-campaign-ui_sv.properties
@@ -65,6 +65,7 @@ emailCampaign.button.settings.label=Inst\u00E4llningar/Layout
 emailCampaign.button.save.label=Spara
 emailCampaign.button.preview.label=Granska
 emailCampaign.button.browser.label=\u00D6ppna p\u00E5 ny sida
+emailCampaign.create.title=V\u00E4lj mall f\u00F6r e-postutskicket
 emailCampaign.template.label=Mall
 emailCampaign.template.change.confirm=\u00C4r du s\u00E4ker p\u00E5 att du vill byta till mall
 emailCampaign.updated.message=Inst\u00E4llningarna uppdaterade
