Add "delete all recipients" feature

--- a/grails-app/i18n/crm-campaign-ui.properties
+++ b/grails-app/i18n/crm-campaign-ui.properties
@@ -9,6 +9,8 @@ crmCampaign.show.title={1}
 crmCampaign.settings.title=Settings - {1}
 crmCampaign.button.create.label=Add campaign
 crmCampaign.button.create.help=Add new campaign
+crmCampaign.button.removeRecipients.label=Remove all recipients
+crmCampaign.button.removeRecipients.confirm=Are you sure you want to remove all recipients?
 
 crmCampaign.tab.main.label=Campaign
 crmCampaign.tab.children.label=Sub-campaigns
