--- a/grails-app/i18n/crm-campaign-ui_sv.properties
+++ b/grails-app/i18n/crm-campaign-ui_sv.properties
@@ -9,6 +9,8 @@ crmCampaign.show.title={1}
 crmCampaign.settings.title=Inst\u00E4llningar - {1}
 crmCampaign.button.create.label=Ny kampanj
 crmCampaign.button.create.help=Registrera ny kampanj
+crmCampaign.button.removeRecipients.label=Ta bort alla mottagare
+crmCampaign.button.removeRecipients.confirm=\u00C4r du s\u00E4ker p\u00E5 att du vill ta bort samtliga mottagare p\u00E5 denna kampanj?
 
 crmCampaign.tab.main.label=Kampanj
 crmCampaign.tab.children.label=Underkampanjer
